...
                android:text="Title"
                android:id="@+id/TV_Title"
                />

            <EditText
                style="@style/ET_Style"
                android:id="@+id/ET_title"/>

            <TextView
                style="@style/TV_Style_Title"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Content"
                android:id="@+id/TV_Content"
                />

            <EditText
                style="@style/ET_Style"
                android:id="@+id/ET_content"
                android:layout_weight="0.22"/>

            <!--<TextView
                style="@style/TV_Style_Title"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Tags"
...
                android:layout_gravity="center_horizontal">

                <EditText
                    style="@style/datetime"
                    android:inputType="date"
                    android:ems="8"
                    android:id="@+id/start_month"
                    android:layout_weight="1"
                    android:hint="Month"/>

                <EditText
                    style="@style/datetime"
                    android:inputType="date"
                    android:ems="8"
                    android:id="@+id/start_day"
                    android:layout_weight="1"
                    android:hint="Day"/>

                <EditText
                    style="@style/datetime"
                    android:inputType="number"
...
                    android:hint="Month"/>

                <EditText
                    style="@style/datetime"
                    android:inputType="date"
                    android:ems="8"
                    android:id="@+id/end_day"
                    android:layout_weight="1"
                    android:hint="Day"/>

                <EditText
                    style="@style/datetime"
                    android:ems="10"
...
                    android:text="PM"
                    android:id="@+id/end_pm"
                    android:checked="false"/>
            </LinearLayout>

            <Button
                android:text="Post Event"
                android:id="@+id/post_event_button"
                android:layout_gravity="center_horizontal"
                style="@style/Button"
                android:onClick="onClick"/>

            <LinearLayout
                android:orientation="vertical"
...
