...
        <LinearLayout
            android:id="@+id/ll_claims"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/layout_fragment_event"
            android:layout_above="@+id/layout_event_buttons">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Claims"
...
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:id="@+id/edit_button"
                android:text="Edit Event"
                style="@style/Button"
                android:onClick="onClick"
                android:layout_width="wrap_content"
                android:layout_weight="1"/>

...
