...
            <!--android:gravity="center"-->
            <!--android:layout_marginTop="5dp"-->
            <!--android:layout_marginBottom="5dp"/>-->

        <Button
            style="@style/Button"
            android:text="Create Event"
            android:id="@+id/create_event"
            android:onClick="onClick"
/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
